@@ -47,6 +47,7 @@ struct _GString
  */
 GStringChunk* g_string_chunk_new	   (gsize size);  
 void	      g_string_chunk_free	   (GStringChunk *chunk);
+void	      g_string_chunk_clear	   (GStringChunk *chunk);
 gchar*	      g_string_chunk_insert	   (GStringChunk *chunk,
 					    const gchar	 *string);
 gchar*	      g_string_chunk_insert_len	   (GStringChunk *chunk,
